force-app/main/default/objects/Service_Request__c/fields/Field_Technician__c.field-meta.xml
<CustomField>
    <fullName>Field_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Technician</label>
    <referenceTo>Field_Technician__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>