force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start_Time__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>